AR-21: Updating validation logic to use Bearer token
