# docs/swagger.json
@@ -32,6 +32,11 @@
         },
         "/api/papers/autocomplete": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Endpoint to retrieve autocomplete suggestions for papers that the user types in the search",
                 "consumes": [
                     "application/json"
@@ -64,6 +69,11 @@
         },
         "/api/papers/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Endpoint to retrieve paper details given a paper id",
                 "consumes": [
                     "application/json"
@@ -96,6 +106,11 @@
         },
         "/api/projects": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Returns a list of objects that contain details of all the projects created by the user",
                 "consumes": [
                     "application/json"
@@ -120,6 +135,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Returns a status json that describes if the project was created successfully or not",
                 "consumes": [
                     "application/json"
@@ -154,6 +174,11 @@
         },
         "/api/projects/{name}": {
             "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Returns a status json that describes if the project was updated successfully.",
                 "consumes": [
                     "application/json"
@@ -193,6 +218,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Returns a status json that describes if the project was deleted successfully.",
                 "consumes": [
                     "application/json"
@@ -225,6 +255,11 @@
         },
         "/api/projects/{name}/seedPapers": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Returns a list of seed papers that have been saved for this project",
                 "consumes": [
                     "application/json"
@@ -258,6 +293,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Adding a seed paper to the list of existing seed papers in the project",
                 "consumes": [
                     "application/json"
@@ -297,6 +337,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Deleting a seed paper from the list of existing seed papers in the project",
                 "consumes": [
                     "application/json"
@@ -338,7 +383,12 @@
         },
         "/auth/getUserInfo": {
             "get": {
-                "description": "Checks if there is a cookie preset with the jwt token. If present, validates the token and then returns the user details",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Checks if there is a valid jwt token present in the header. If present, validates the token and then returns the user details",
                 "consumes": [
                     "application/json"
                 ],
@@ -398,7 +448,7 @@
         },
         "/auth/google/callback": {
             "get": {
-                "description": "Will handel the google OAuth call back and redirect to homepage",
+                "description": "Will handle the google OAuth call back and redirect to homepage with the token in the url",
                 "consumes": [
                     "application/json"
                 ],
@@ -421,7 +471,12 @@
         },
         "/auth/isLoggedIn": {
             "get": {
-                "description": "Checks if there is a cookie preset with the jwt token. If present, validates the token",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Checks if there is a valid jwt token present in the headers.",
                 "consumes": [
                     "application/json"
                 ],
@@ -514,6 +569,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
